[metadata]
name = iapetus
version = 0.0.1

[options]
packages = iapetus
python_requires = >=3.8
install_requires =
    appdirs
    cryptography

[options.extras_require]
test =
    flake8
    pytest

[options.entry_points]
console_scripts =
    iapetus = iapetus.main:main

[flake8]
max_line_length = 120
